部署前，保存一下原来能运行的